registration: fixed align form
git-svn-id: svn+ssh://gestorpsi.com.br/usr/home/gestor/svn/gestorpsi/trunk@841 9d7c2c66-4cfa-11dd-a3c8-a9f1d0faa0c5

--- a/gestorpsi/media/css/layout.css
+++ b/gestorpsi/media/css/layout.css
@@ -1174,13 +1174,22 @@ body .main_area.login form  span.error {
 	text-align: left;
 }
 
-div.ie_block label {
+div.ie_block label, div.main_area.login label {
 	text-align: left;
 	display: block;
-	margin-left: 30px;
+	margin-left: 0;
 }
-div.ie_block label input {
-	width: 190px;
+div.ie_block label p,
+div.main_area.login label p {
+	padding: 0;
+	margin: 0;
+	height: inherit;
+}
+
+div.ie_block label input,
+div.main_area.login label input
+ {
+	width: 250px;
 }
 fieldset.collapsed {
 	border: 0px;
